--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,9 @@ language: java
 jdk:
   - openjdk8
 sudo: false
+deploy:
+  provider: script
+  script: bash docker_push
+  on:
+    branch: dockerhub_deploy
 
